# symmetrical-octo-adventure

./: .env  Cargo.toml  down.sql  package-lock.json  package.json  sqlx-data.json  test.http  up.sql
sql/: down.sql  mock.sql  test.sql  up.sql
src/: auth.rs  db_modeling.rs  error.rs  event.rs  fullfillment.rs  main.rs  participant.rs  requirement.rs  user.rs  utils.rs
