[package]
name = "be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite", "offline" ] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15.5"
sha2 = "0.10"
rand = "0.8.5"
jsonwebtoken = {version = "8", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.3.4", features = ["cors", "trace"] }
tower = "0.4.13"
hyper = { version = "0.14", features = ["full"] }
mime = "0.3"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
panic = "abort"
